--- a/css/index-making.css
+++ b/css/index-making.css
@@ -86,7 +86,7 @@
     text-transform: none;
 }
 
-.btn_making_learn_more {
+.btn_making_learn_more[type="submit"] {
     font-weight: 500;
     color: #fff;
     background-color: var(--text-color);
@@ -100,14 +100,11 @@
     text-decoration: none;
 }
 
-a:hover {
+.btn_making_learn_more[type="submit"]:hover {
     text-decoration: none;
     color: var(--color-white);
     background: var(--background-dark);
 }
-
-
-
 
 .columns_making__coffee {
     /* margin-top: 50px; */
@@ -124,9 +121,6 @@ a:hover {
     justify-content: center;
     min-width: 320px;
     line-height: 1;
-
-
-
 }
 
 .column_making-learn-more {
@@ -148,7 +142,6 @@ a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
 
@@ -161,8 +154,6 @@ a:hover {
         flex: 1;
         margin: 0px 15px 0px 15px;
         padding: 0px 15px 0px 15px;
-
-
     }
 
     .columns_making__coffee {
@@ -171,14 +162,11 @@ a:hover {
         align-items: center;
         justify-content: space-around;
         flex: 1;
-
-
     }
 
     .image__making {
         width: 470px;
         min-height: 445px;
-
     }
 
     .column__making-coffee {
@@ -187,9 +175,6 @@ a:hover {
         flex-basis: 100%;
         max-width: 100%;
         margin-top: 0px;
-
-
-
     }
 
 
@@ -202,14 +187,8 @@ a:hover {
         margin-top: 20px;
         text-align: center;
         padding-left: 15px;
-
-
-
     }
 
-    /* .master-coffe-making {
-        padding: 90px 24px 90px 24px;
-    } */
 
     .fonts_logo_making {
         padding-left: 15px;
@@ -219,10 +198,6 @@ a:hover {
         line-height: 26px;
         padding-top: 0%;
         margin-top: 0%;
-
-
-
-
     }
 
     .p_making__font {
@@ -248,7 +223,6 @@ a:hover {
 
     .h3_master_coffee_making {
         font-size: 34px;
-
     }
 
 }
