--- a/css/index-video.css
+++ b/css/index-video.css
@@ -9,13 +9,47 @@
     align-items: center;
     justify-content: center;
     color: var(--text-color);
+    text-align: center;
+   
+    
+}
+
+.video_make-coffee {
+    padding-top: 130px;
+    padding-bottom: 130px;
 
 }
 
+@media (min-width: 700px) {
+    .video_make-coffee {
+        padding-top: 280px;
+        padding-bottom: 280px;
+    }
+}
 #video__text {
     color: var(--color-white);
-    font-size: 58px;
+    font-size: 38px;
+    line-height: 1.1;
+    font-family: var(--text-title);
+    font-weight: 400;
+    /* text-transform: none;
+    text-decoration: none;
+    font-style: normal; */
+    letter-spacing: .02em;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    min-width: 320px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+    padding-right: 10px;
+}
 
+@media (min-width:700px) {
+    #video__text {
+        color: var(--color-white);
+    font-size: 58px;
     line-height: 1.1;
     font-family: var(--text-title);
     font-weight: 400;
@@ -23,11 +57,33 @@
     text-decoration: none;
     font-style: normal;
     letter-spacing: .02em;
-
+    text-align: center;
+    }
 }
 
 .fonts_logo_video {
     font-family: var(--text-gold);
     /* color: var(--text-color); */
     font-size: 24px;
+    text-align: center;
 }
+
+
+/* @media (max-width:320px) {
+    .video {
+        padding-top: 130px;
+        padding-bottom: 130px;
+    }
+} */
+
+
+color: var(--color-white);
+    font-size: 58px;
+    line-height: 1.1;
+    font-family: var(--text-title);
+    font-weight: 400;
+    text-transform: none;
+    text-decoration: none;
+    font-style: normal;
+    letter-spacing: .02em;
+    text-align: center;
