--- a/css/common.css
+++ b/css/common.css
@@ -18,6 +18,7 @@
     --light-text-color: rgb(255, 255, 238);
     --color-text-gray-light: rgba(159, 159, 159);
     --text-color-gr: rgba(91, 91, 91);
+    --text-color-gray-text:rgb(130,130,130);
     --text-title: 'Bebas Neue';
     --text-content: 'Roboto', sans-serif;
     --text-gold: 'Satisfy';
