commented gradient in header. doesn't work

--- a/css/index-header.css
+++ b/css/index-header.css
@@ -3,7 +3,7 @@
     padding: 30px 15px 30px 15px;
     background-image: url(../img/background-header.png);
     background-size: cover;
-    /*background: linear-gradient(rgba(10,10,10,1.1) rgba(0,0,0,0.1) url(../img/background-header.png));*/
+    /*background: linear-gradient(rgba(39,41,43,0.7) rgba(39,41,43,10));*/
     height: 938px;
     padding-left: 213px;     
     padding-right: 213px;
