--- a/css/index-team.css
+++ b/css/index-team.css
@@ -56,13 +56,14 @@
     text-align: left;
     display: flex;
     flex-direction: column;
-    /* padding-left: 30px;
-    padding-right: 30px; */
+    margin-top: 30px;
 }
 
 .img_team {
     width: 350px;
     height: 235;
+    width: 100%;
+
 }
 
 .team__info {
@@ -105,46 +106,118 @@
     margin-right: 7.5px;
 }
 
-@media (min-width:700px) {
+@media (min-width:768px) {
+    .team__info {
+        padding: 46px 52px 46px 52px;
+    }
+
+    .img_team {
+        width: 50%;
+        width: 356px;
+        height: 442px;
+    }
+
+    .card_team {
+        display: flex;
+        flex-direction: row;
+        /* align-items: left; */
+        /* justify-content: left; */
+        text-align: left;
+    }
+    #card_team_anna {
+        display: flex;
+        flex-direction: row-reverse;
+}
+}
+
+
+@media (min-width:850px) {
+    .team__info {
+        padding: 46px 52px 46px 52px;
+    }
+
+    .img_team {
+        width: 50%;
+        width: 393px;
+        height: 417px;
+    }
+
+    .card_team {
+        display: flex;
+        flex-direction: row;
+        text-align: left;
+    }
+}
+@media (min-width: 900px) {
     .team {
         padding-left: 30px;
         padding-right: 30px;
     }
 
-}
-
-@media (min-width:700px) {
     .h2_team {
         font-size: 58px;
         text-transform: none;
         text-decoration: none;
         font-style: normal;
     }
-}
+
+    .img_team {
+        width: 418px;
+        height: 418px;
+        /* width: 100%; */
+
+    }
+    .team__info {
+        padding: 34px 28px 34px 28px;
 
 
-@media (min-width:700px) {
+    }
     .card_team {
         display: flex;
         flex-direction: row;
+        text-align: left;
+        
+        }
 
+    #card_team_anna {
+        display: flex;
+        flex-direction: row-reverse;
     }
 }
 
-@media (min-width: 700px) {
+@media (min-width:1085px) {
+    .team {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+    .h2_team {
+        font-size: 58px;
+        text-transform: none;
+        text-decoration: none;
+        font-style: normal;
+    }
+
     .img_team {
-        width: 583px;
+        width: 575px;
         height: 399px;
+        /* width: 100%; */
+
     }
-}
-
-
-@media (min-width: 700px) {
     .team__info {
-        padding: 60px 70px 60px 70px;
+        padding: 34px 28px 34px 28px;
+
 
     }
+    .card_team {
+        display: flex;
+        flex-direction: row;
+        text-align: left;
+        
+        }
+
+    #card_team_anna {
+        display: flex;
+        flex-direction: row-reverse;
+    }
 }
-
-
-
