changed img in header

--- a/css/index-header.css
+++ b/css/index-header.css
@@ -1,13 +1,14 @@
 .header {
     margin-top: 10px;
     padding: 30px 15px 30px 15px;
-    background-image: url(../img/background-header.png);
+    background:  linear-gradient( rgba(0,0,0,0.85),rgba(0,0,0,0.85) ), url(../img/background-header.png);
+    /*background-image: url(../img/background-header.png);
+    background: linear-gradient(rgba(39,41,43,0.7) rgba(39,41,43,10));*/
     background-size: cover;
-    /*background: linear-gradient(rgba(39,41,43,0.7) rgba(39,41,43,10));*/
     height: 938px;
     padding-left: 213px;     
     padding-right: 213px;
-    opacity: 0.7;
+    opacity: 0.85;
     
 }
 
