--- a/css/index-team.css
+++ b/css/index-team.css
@@ -35,7 +35,7 @@
 }
 
 .hr_logo_team {
-    height: 3px;
+    min-height: 3px;
     width: 55px;
     background-color: var(--text-color);
 
@@ -61,7 +61,7 @@
 
 .img_team {
     width: 350px;
-    height: 235;
+    min-height: 235;
     width: 100%;
 
 }
@@ -82,7 +82,7 @@
 }
 
 .hr_team {
-    height: 1px;
+    min-height: 1px;
     width: 276px;
 
 }
@@ -113,8 +113,8 @@
 
     .img_team {
         width: 50%;
-        width: 356px;
-        height: 442px;
+        /* width: 356px; */
+        min-height: 442px;
     }
 
     .card_team {
@@ -138,8 +138,8 @@
 
     .img_team {
         width: 50%;
-        width: 393px;
-        height: 417px;
+        /* width: 393px; */
+        min-height: 417px;
     }
 
     .card_team {
@@ -162,13 +162,13 @@
     }
 
     .img_team {
-        width: 418px;
-        height: 418px;
-        /* width: 100%; */
+        /* width: 418px; */
+        min-height: 418px;
+        width: 50%;
 
     }
     .team__info {
-        padding: 34px 28px 34px 28px;
+        padding: 46px 52px 46px 52px;
 
 
     }
@@ -199,13 +199,13 @@
     }
 
     .img_team {
-        width: 575px;
-        height: 399px;
-        /* width: 100%; */
+        /* width: 575px; */
+        min-height: 399px;
+        width: 50%;
 
     }
     .team__info {
-        padding: 34px 28px 34px 28px;
+        padding: 46px 52px 46px 52px;
 
 
     }
@@ -221,3 +221,4 @@
         flex-direction: row-reverse;
     }
 }
+
