--- a/css/common.css
+++ b/css/common.css
@@ -24,13 +24,13 @@
     --text-gold: 'Satisfy';
 }
 
-/* img {
+img {
     display: block;
     width: 100%;
     
   
     
-} */
+}
 .little__title {
     color: var(--text-color);
     font-family: var(--text-gold);
