--- a/css/index-making.css
+++ b/css/index-making.css
@@ -86,18 +86,18 @@
     text-transform: none;
 }
 
-.btn_making_learn_more[type="submit"] {
-    font-weight: 500;
+.btn_making_learn_more{
+    font-weight: 400;
     color: #fff;
     background-color: var(--text-color);
     font-family: var(--text-content);
-    text-align: center;
+    text-align: left;
     background-position: 50%;
     cursor: pointer;
     padding: 18px 30px;
     display: inline-block;
     margin-top: 40px;
-    text-decoration: none;
+    /* text-decoration: none; */
 }
 
 .btn_making_learn_more[type="submit"]:hover {
