--- a/css/index-pricing.css
+++ b/css/index-pricing.css
@@ -69,6 +69,8 @@
     padding-bottom: 0;
     text-align: left;
     font-family: 'roboto', serif;
+    font-size: 18px;
+    font-weight: 500;
 }
 
 .list__about__course {
