--- a/css/index-header.css
+++ b/css/index-header.css
@@ -25,6 +25,7 @@
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 15px;
+    
 }
 
 .header__logo {
@@ -82,6 +83,12 @@ h1 {
 
 .header__list, .header__list__social {
     list-style-type: none;
+}
+.header__list__li {
+    margin-right: 15px;
+    display: inline-block;
+   /* width: auto;*/
+     width: fit-content;
 }
 
 .under__header-coffee-lab {
