--- a/css/index-about.css
+++ b/css/index-about.css
@@ -1,8 +1,7 @@
 .about__our__courses {
     display: flex;
-    background: linear-gradient(rgba(39,41,43, 0.7),rgba(39,41,43, 10)), url(/img/background_section_about.png);
+    background: linear-gradient(rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.8)), url(/img/background_section_about.png);
     background-size: 100% auto;
-    background-color: var(--color-gray);
     color: var(--color-white);
     background-attachment: fixed;
     background-repeat: no-repeat;
