--- a/css/products.css
+++ b/css/products.css
@@ -1,5 +1,7 @@
 .our_fav_coffee_recipes{
     background-color: #f2f0ec;
+    
+  
 }
 #first_p_with_int-print {
     font-family: 'Satisfy', cursive;
@@ -22,6 +24,7 @@
 #coffee_background {
     width: 300px;
     height: 300px;
+    background-color: rgba(0,0,0,0.8);
 }
 #cheese_dessert{
     width: 300px;
@@ -59,4 +62,35 @@
 .recipes_our_fav{
     font-family: 'Bebas Neue', cursive;
     letter-spacing: 3px;
+}
+.cold_latte{
+    text-align: center;
+    display: flex;
+    background: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url(../img/photo_coffe_background.png);
+    background-size:100% auto;
+    width: 400px;
+    /* margin: auto; */
+    color: var(--color-white);
+    background-attachment:scroll;
+    background-repeat: no-repeat;
+    font-family: var(--text-content);
+    font-size: 19px;
+    position: relative;
+    padding: 140px 0 140px 0;
+}
+.cheese_dessert{
+    text-align: center;
+    display: flex;
+    background: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url(../img/backgr_cheese_cake.png);
+    background-size:100% auto;
+    width: 400px;
+    /* margin: auto; */
+    color: var(--color-white);
+    background-attachment:scroll;
+    background-repeat: no-repeat;
+    font-family: var(--text-content);
+    font-size: 19px;
+    position: relative;
+    text-align: center;
+    padding: 140px 0 140px 0;
 }
