added bootstrap element accordion

--- a/css/common.css
+++ b/css/common.css
@@ -7,7 +7,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  
 }
 
 :root {
@@ -16,6 +15,7 @@
     --color-white: #fff;
     --background-dark: #27292b;
     --cards-color: #2f3133;
+    --color-none: opasity;
     --light-text-color: rgb(255, 255, 238);
     --color-text-gray-light: rgba(159, 159, 159);
     --text-color-gr: rgba(91, 91, 91);
@@ -51,4 +51,5 @@ img {
     display: block;
     border-bottom: 3px solid var(--text-color);
     width: 35px;
+
 }
