--- a/css/index-about.css
+++ b/css/index-about.css
@@ -1,61 +1,111 @@
 .about__our__courses {
     display: flex;
-    background: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url(../img/background_section_about.png);
+    background: linear-gradient(rgba(39, 41, 43, 0.8), rgba(39, 41, 43, 10)), url(../img/background_section_about.png);
     background-size: 100% auto;
+    min-width: 320px;
     color: var(--color-white);
     background-attachment: fixed;
     background-repeat: no-repeat;
     font-family: var(--text-content);
     font-size: 17px;
+    line-height: 1.5;
     position: relative;
-    padding: 140px 0 140px 0;
+    padding: 180px 0 180px 0;
 }
-
-
 .about__our__inner {
-    flex-basis: 66%;
-    padding: 0 40px 0 40px;
-    margin-left: 20px 0 0 0;
+    flex-basis: 50%;
+    padding: 20px;
 }
+
+.about__course__info {
+    padding: 20px;
+}
+
 .info__about__course {
-    flex-basis: 33%;    
-    color: var(--color-white);    
-    padding: 0 40px 0 40px;
-    margin-left: 0 0 0 20px;
+    flex-basis: 50%;
+    color: var(--color-white);
+    padding: 20px;
 }
 
 .about__course__time {
     font-size: 19px;
 }
-.about__course__group {
-    padding: 25px 0 25px 0;
-}
+
 .about__btn {
-   margin-top: 20px;
-   margin-bottom: 20px;
+    padding: 20px;
+
 }
+
+.btn__choice {
+    display: inline-block;
+}
+
 .btn__select__course {
     background-color: var(--text-color);
     color: var(--color-white);
     text-decoration: none;
     padding: 10px;
-    margin-top: 20px;
+    margin: 10px;
     border: 2px solid var(--text-color);
 }
+
 .btn__contact {
-    color: var(--text-color);;
+    color: var(--text-color);
+    ;
     text-decoration: none;
     padding: 10px;
-    margin-top: 20px;
+    margin: 10px;
     border: 2px solid var(--text-color);
 
 }
- /* accordion*/
-.accordion__about__item {
-    position: relative;
-    margin-bottom: 10px 0 10px 0;
+
+/* accordion*/
+.panell {
+    flex-basis: 32%;
+}
+
+.accordion__about {
+    flex-basis: 68%;
 
 }
+
+.accordion {
+    --bs-accordion-color: var(--color-white);
+    --bs-accordion-bg: var(--color-none);
+    --bs-accordion-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
+    --bs-accordion-border-color: var(--color-text-gray-light);
+    --bs-accordion-border-width: 1px;
+    --bs-accordion-border-radius: 0.375rem;
+    --bs-accordion-inner-border-radius: calc(0.375rem - 1px);
+    --bs-accordion-btn-padding-x: 1.25rem;
+    --bs-accordion-btn-padding-y: 1rem;
+    --bs-accordion-btn-color: var(--color-white);
+    --bs-accordion-btn-bg: var(--bs-accordion-bg);
+    --bs-accordion-btn-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='var%28--bs-body-color%29'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
+    --bs-accordion-btn-icon-width: 1.25rem;
+    --bs-accordion-btn-icon-transform: rotate(-90deg);
+    --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
+    --bs-accordion-btn-active-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%230c63e4'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
+    --bs-accordion-btn-focus-border-color: var(--color-none);
+    --bs-accordion-btn-focus-box-shadow: var(--color-none);
+    --bs-accordion-body-padding-x: 1.25rem;
+    --bs-accordion-body-padding-y: 1rem;
+    --bs-accordion-active-color: var(--color-white);
+    --bs-accordion-active-bg: var(--color-none);
+
+}
+
+.accordion-button {
+    font-family: var(--text-titlle);
+    font-size: 26px;
+}
+
+.accordion__about__item {
+    position: relative;
+
+
+}
+
 .accordion__item__input {
     position: absolute;
     top: 0;
@@ -63,27 +113,63 @@
     opacity: 0;
 
 }
+
 .accordion__triger {
     display: block;
     font-family: var(--text-title);
     font-size: 26px;
     padding: 14px 0 14px 0;
-    
+
 
 }
+
 .accordion__about__content {
     display: none;
     padding: 14px 0 14px 0;
-    
+
 
 }
-.accordion__item__input:checked ~ .accordion__about__content {
+
+.accordion__item__input:checked~.accordion__about__content {
     display: block;
 }
 
 @media screen and (max-width: 992px) {
-    
-.about__our__courses {
-    background-size: auto 100% ;
+
+    .about__our__courses {
+
+        padding: 140px 0 140px 0;
+    }
+
+    .about__course__time {
+        font-size: 14px;
+    }
 }
+
+@media screen and (max-width: 768px) {
+
+    .about__our__courses {
+        display: grid;
+        grid-template-columns: 1fr;
+        background-size: auto;
+
+    }
+
+}
+
+@media screen and (max-width: 320px) {
+
+    .about__our__courses {
+        background-size: auto;
+        font-size: 12px;
+
+    }
+
+    .about__course__time {
+        font-size: 14px;
+    }
+
+    .btn__choice {
+        display: block;
+    }
 }
