--- a/css/common.css
+++ b/css/common.css
@@ -7,6 +7,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
 :root {
@@ -44,12 +45,12 @@ img {
     font-family: var(--text-title);
     font-size: 58px;
     font-weight: 300;
-    margin: 0;
+    margin: 10px 0 10px 0;
 }
 
 .shot__line {
     display: block;
     border-bottom: 3px solid var(--text-color);
     width: 35px;
-
+    margin: 20px 0 20px 0;
 }
