--- a/css/index-about.css
+++ b/css/index-about.css
@@ -1,4 +1,4 @@
-.about__our__courses {
+.ab__our__courses {
     display: flex;
     background: linear-gradient(rgba(39, 41, 43, 0.8), rgba(39, 41, 43, 10)), url(../img/background_section_about.png);
     background-size: 100% auto;
@@ -10,11 +10,11 @@
     font-size: 17px;
     line-height: 1.5;
     position: relative;
-    padding: 180px 0 180px 0;
+    padding: 180px 0 180px 40px;
 }
 .about__our__inner {
     flex-basis: 50%;
-    padding: 20px;
+    padding: 20px 20px 20px 40px;
 }
 
 .about__course__info {
@@ -24,7 +24,9 @@
 .info__about__course {
     flex-basis: 50%;
     color: var(--color-white);
-    padding: 20px;
+    padding: 40px 20px 20px 15%;
+    margin-left: 60px;
+    margin-right: 60px;
 }
 
 .about__course__time {
@@ -32,7 +34,8 @@
 }
 
 .about__btn {
-    padding: 20px;
+    padding: 10px;
+    margin: 10px;
 
 }
 
@@ -74,26 +77,26 @@
     --bs-accordion-bg: var(--color-none);
     --bs-accordion-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
     --bs-accordion-border-color: var(--color-text-gray-light);
-    --bs-accordion-border-width: 1px;
-    --bs-accordion-border-radius: 0.375rem;
     --bs-accordion-inner-border-radius: calc(0.375rem - 1px);
-    --bs-accordion-btn-padding-x: 1.25rem;
-    --bs-accordion-btn-padding-y: 1rem;
+    --bs-accordion-btn-padding-x: 0;
     --bs-accordion-btn-color: var(--color-white);
     --bs-accordion-btn-bg: var(--bs-accordion-bg);
     --bs-accordion-btn-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='var%28--bs-body-color%29'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
-    --bs-accordion-btn-icon-width: 1.25rem;
-    --bs-accordion-btn-icon-transform: rotate(-90deg);
+    --bs-accordion-btn-icon-transform: rotateZ(90deg);
     --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
     --bs-accordion-btn-active-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%230c63e4'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
     --bs-accordion-btn-focus-border-color: var(--color-none);
     --bs-accordion-btn-focus-box-shadow: var(--color-none);
-    --bs-accordion-body-padding-x: 1.25rem;
-    --bs-accordion-body-padding-y: 1rem;
+    --bs-accordion-body-padding-x: 0;
     --bs-accordion-active-color: var(--color-white);
     --bs-accordion-active-bg: var(--color-none);
 
 }
+.accordion-button:not(.collapsed)::after {
+    background-image: var(--color-white); 
+    transform: var(--bs-accordion-btn-icon-transform);
+}
+
 
 .accordion-button {
     font-family: var(--text-titlle);
@@ -111,7 +114,6 @@
     top: 0;
     left: 0;
     opacity: 0;
-
 }
 
 .accordion__triger {
@@ -119,57 +121,44 @@
     font-family: var(--text-title);
     font-size: 26px;
     padding: 14px 0 14px 0;
-
-
 }
 
 .accordion__about__content {
     display: none;
     padding: 14px 0 14px 0;
 
-
 }
 
 .accordion__item__input:checked~.accordion__about__content {
     display: block;
 }
-
 @media screen and (max-width: 992px) {
-
     .about__our__courses {
-
         padding: 140px 0 140px 0;
     }
-
     .about__course__time {
         font-size: 14px;
     }
 }
-
 @media screen and (max-width: 768px) {
-
     .about__our__courses {
         display: grid;
         grid-template-columns: 1fr;
         background-size: auto;
-
     }
-
 }
 
 @media screen and (max-width: 320px) {
-
     .about__our__courses {
         background-size: auto;
         font-size: 12px;
-
     }
 
     .about__course__time {
         font-size: 14px;
     }
-
     .btn__choice {
-        display: block;
+        display: flex;
+        flex-direction: row;
     }
 }
