--- a/css/index-making.css
+++ b/css/index-making.css
@@ -1,30 +1,42 @@
-.hr_logo_making {
-    min-height: 3px;
-    width: 10%;
-    background-color: var(--text-color);
-    margin-top: 20px;
+.master-coffe-making {
+    /* margin: 0px -15px 0px -15px; */
+    display: flex;
+    flex-direction: column;
+    font-size: 100%;
+    font: inherit;
+    box-sizing: border-box;
+    padding: 90px 24px 90px 24px;
+    align-items: left;
 }
 
-/* .fonts_logo_making {
-    --bs-body-font-family: var(--text-gold);
-} */
-
 .image__making {
-    width: 366px;
-    min-height: 346px;
+    /* width: 366px;
+    min-height: 347px; */
+    font-size: 100%;
+    width: 100%;
+}
+
+.columns_making__coffee {
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+    padding-right: 10px;
     font-size: 100%;
 }
 
+.column__making-coffee {
+    margin-top: 50px;
+
+}
+
 .fonts_logo_making {
-    display: block;
     font-family: var(--text-gold);
     color: var(--text-color);
-    font-size: 24px;
-    line-height: 26px;
-    /* margin-top: 20px; */
-    max-width: 100%;
+    font-size: 26px;
+    line-height: 1;
     margin-block-start: 1em;
     margin-block-end: 1em;
+    letter-spacing: 0;
 }
 
 .h2_master_coffee_making {
@@ -35,6 +47,10 @@
     font-weight: 400;
     letter-spacing: .02em;
     margin-top: 20px;
+    text-transform: none;
+    text-decoration: none;
+    font-style: normal;
+    justify-content: flex-start;
 }
 
 .p_making__font {
@@ -44,9 +60,12 @@
     font-weight: 400;
     color: var(--text-color-gr);
     margin-top: 25px;
-    min-width: 320px;
-    word-wrap: break-word;
-    z-index: 1;
+    text-decoration: none;
+    font-style: normal;
+    letter-spacing: 0;
+    text-transform: none;
+
+
 }
 
 .p_making_coffee_fonts {
@@ -56,21 +75,15 @@
     font-weight: 400;
     color: var(--color-text-gray-light);
     margin-top: 25px;
-    min-width: 320px;
-    word-wrap: break-word;
-    z-index: 1;
+    text-decoration: none;
+    font-style: normal;
+    letter-spacing: 0;
+    text-transform: none;
 }
 
-.p_making_coffee_fonts_h3 {
-    font-size: 17px;
-    line-height: 1.5;
-    font-family: var(--text-content);
-    font-weight: 400;
-    color: var(--color-text-gray-light);
-    margin-top: 25px;
-    min-width: 320px;
-    word-wrap: break-word;
-    z-index: 1;
+.column_making-learn-more {
+    margin-top: 50px;
+
 }
 
 .h3_master_coffee_making {
@@ -80,23 +93,39 @@
     font-weight: 400;
     letter-spacing: .02em;
     color: var(--color-gray);
-    word-wrap: break-word;
     text-decoration: none;
     font-style: normal;
     text-transform: none;
 }
 
-.btn_making_learn_more{
+.hr_logo_making {
+    min-height: 3px;
+    width: 10%;
+    background-color: var(--text-color);
+    margin-top: 20px;
+}
+
+.p_making_coffee_fonts_h3 {
+    font-size: 17px;
+    line-height: 1.5;
+    font-family: var(--text-content);
+    font-weight: 400;
+    color: var(--color-text-gray-light);
+    margin-top: 25px;
+}
+
+/* .fonts_logo_making {
+    --bs-body-font-family: var(--text-gold);
+} */
+
+.btn_making_learn_more {
     font-weight: 400;
     color: #fff;
     background-color: var(--text-color);
     font-family: var(--text-content);
-    text-align: left;
-    background-position: 50%;
     cursor: pointer;
     padding: 18px 30px;
-    display: inline-block;
-    margin-top: 40px;
+    margin-top: 10px;
     text-decoration: none;
 }
 
@@ -106,46 +135,9 @@
     background: var(--background-dark);
 }
 
-.columns_making__coffee {
-    /* margin-top: 50px; */
-    flex-direction: column;
-
-}
-
-.column__making-coffee {
-    margin: 0px;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-    justify-content: center;
-    min-width: 320px;
-    line-height: 1;
-}
-
-.column_making-learn-more {
-    margin-top: 50px;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-
-.master-coffe-making {
-    margin: 0px 15px 0px 15px;
-    font-size: 100%;
-    font: inherit;
-    box-sizing: border-box;
-    padding: 90px 24px 90px 24px;
-    position: relative;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 
 
-@media (min-width: 700px) {
+@media (min-width: 880px) {
     .container_making-coffee {
         display: flex;
         flex-direction: row;
@@ -153,11 +145,17 @@
         justify-content: space-around;
         flex: 1;
         margin: 0px 15px 0px 15px;
+        font-size: 100%;
+        box-sizing: border-box;
+        padding: 90px 24px 90px 24px;
         padding: 0px 15px 0px 15px;
+
+
     }
 
     .columns_making__coffee {
         display: flex;
+        flex-direction: column;
         flex-direction: row;
         align-items: center;
         justify-content: space-around;
@@ -167,6 +165,7 @@
     .image__making {
         width: 470px;
         min-height: 445px;
+
     }
 
     .column__making-coffee {
@@ -177,7 +176,6 @@
         margin-top: 0px;
     }
 
-
     .h2_master_coffee_making {
         flex-basis: 25%;
         max-width: 25%;
@@ -185,32 +183,21 @@
         margin-left: 15px;
         font-size: 58px;
         margin-top: 20px;
-        text-align: center;
-        padding-left: 15px;
     }
-
 
     .fonts_logo_making {
         padding-left: 15px;
         padding-right: 15px;
-        margin-left: 15px;
-        font-size: 24px;
-        line-height: 26px;
-        padding-top: 0%;
-        margin-top: 0%;
     }
 
     .p_making__font {
         padding-left: 15px;
         padding-right: 15px;
-        margin-left: 15px;
-
     }
 
     .p_making_coffee_fonts {
         padding-left: 15px;
         padding-right: 15px;
-        margin-left: 15px;
     }
 
     .column_making-learn-more {
@@ -223,6 +210,6 @@
 
     .h3_master_coffee_making {
         font-size: 34px;
-    }
 
+    }
 }
