--- a/css/index-team.css
+++ b/css/index-team.css
@@ -59,10 +59,19 @@
 }
 
 .img_team {
-    width: 350px;
-    min-height: 235;
+    /* width: 350px;
+    min-height: 235; */
     width: 100%;
+    /* height: 100%; */
+    object-fit: cover;
+    object-position: 5.828% 72.806%;
 
+}
+
+#img_team_anna {
+    object-fit: cover;
+    object-position: 50.641% 43.445%;
+    
 }
 
 .team__info {
