--- a/css/index-making.css
+++ b/css/index-making.css
@@ -12,8 +12,11 @@
 .image__making {
     /* width: 366px;
     min-height: 347px; */
-    font-size: 100%;
+    /* font-size: 100%; */
     width: 100%;
+    height: 100%;
+    /* object-fit: contain;
+    object-position: 50% 50%; */
 }
 
 .columns_making__coffee {
@@ -163,9 +166,12 @@
     }
 
     .image__making {
-        width: 470px;
-        min-height: 445px;
-
+        max-width: 470px;
+        max-height: 445px;
+        /* width: 100%;
+        height: 100%; */
+        /* object-fit: contain;
+        object-position: 50% 50%; */
     }
 
     .column__making-coffee {
