--- a/css/index-making.css
+++ b/css/index-making.css
@@ -17,6 +17,7 @@
     height: 100%;
     /* object-fit: contain;
     object-position: 50% 50%; */
+    
 }
 
 .columns_making__coffee {
@@ -140,7 +141,7 @@
 
 
 
-@media (min-width: 880px) {
+@media (min-width: 780px) {
     .container_making-coffee {
         display: flex;
         flex-direction: row;
@@ -152,6 +153,7 @@
         box-sizing: border-box;
         padding: 90px 24px 90px 24px;
         padding: 0px 15px 0px 15px;
+        
 
 
     }
@@ -163,15 +165,16 @@
         align-items: center;
         justify-content: space-around;
         flex: 1;
+        
     }
 
     .image__making {
         max-width: 470px;
         max-height: 445px;
-        /* width: 100%;
-        height: 100%; */
-        /* object-fit: contain;
-        object-position: 50% 50%; */
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        object-position: 50% 50%;
     }
 
     .column__making-coffee {
