--- a/css/index-pricing.css
+++ b/css/index-pricing.css
@@ -136,7 +136,7 @@
         margin: 20px 0 20px 0; 
     }
     .our__pricing__plans {
-        padding: 0 30px 0 30px;
+        padding: 0;
     }
 }
 
@@ -149,7 +149,7 @@
         align-items: center;
     }
     .our__pricing__plans {
-        padding: 0 30px 0 30px;
+        padding: 0;
     }
 
     .about__pricing {
