css in index-remember

--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@
 @import url(index-video.css);
 @import url(index-team.css);
 @import url(index-pricing.css);
+@import url(index-remember.css);
 @import url(index-students-say.css);
 @import url(index-about.css);
 @import url(products.css);
