--- a/css/index-header.css
+++ b/css/index-header.css
@@ -1,24 +1,24 @@
 .header {
-   
+
     padding: 30px 15px 30px 15px;
-    background:  linear-gradient( rgba(0,0,0,0.85),rgba(0,0,0,0.85) ), url(../img/background-header.png);
+    background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(../img/background-header.png);
     background-size: cover;
-    padding-left: 213px;     
+    padding-left: 213px;
     padding-right: 213px;
     opacity: 0.85;
     margin: auto;
-           
+
 }
 
 .header__container {
     display: grid;
-    flex-direction: column;
-    justify-items: center; 
-    /*align-items: center;*/
+    justify-items: center;
     margin: auto;
+
 }
 
-/*.nav__menu::before {
+
+.nav__menu::before {
     content: "";
     position: absolute;
     top: 0;
@@ -26,9 +26,6 @@
     width: 100%;
     height: 100%;
 
-}*/
-.header__burger {
-    display: none;
 }
 
 h1 {
@@ -39,24 +36,36 @@ h1 {
 }
 
 .under__header {
-    font-family: 'roboto',serif;
+    font-family: 'roboto', serif;
     font-size: 17px;
     color: var(--light-text-color);
+    text-align: center;
 }
 
 .img__logo {
     width: 188px;
 }
 
-.nav__links__main__menu, .header__list__social {
+.nav__links__main__menu,
+.header__list__social {
     list-style: none;
 }
 
 .nav__menu {
-    display: flex;
+    display: grid;
     justify-content: space-between;
     max-width: 1200px;
     margin: auto;
+    justify-items: start;
+
+}
+
+.emptyOne {
+    width: 130px;
+}
+
+.emptyTwo {
+    width: 100px;
 }
 
 .nav__links__main__menu {
@@ -75,7 +84,7 @@ h1 {
     font-family: 'roboto', sans-serif;
     font-size: 16px;
     font-weight: 600;
-    
+
 }
 
 .svg-icon {
@@ -85,30 +94,29 @@ h1 {
 
 .svg-icon:hover {
     fill: #d3904c;
-       
+
 }
 
-.header__logo {
-    margin: 0 115px 0 45px;
-}
+
+
 
 .header__list__social {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 5px;
-    margin-left: 100px;
+
     justify-items: baseline;
-   
+
 }
 
-.nav__wrapper {
+.nav__menu {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     margin: auto;
+
 }
 
 .nav__links__main__menu {
-    
     color: var(--light-text-color);
 }
 
@@ -143,70 +151,133 @@ h1 {
     font-family: 'Satisfy';
     font-size: 24px;
 }
+
 .openedMenu {
     color: var(--light-text-color);
 }
 
-@media screen and (max-width: 992px) {
-    .header__up, .header__list, .header__list__social  {
-        justify-content: baseline;
-        display: flex;
-        flex-direction: column;
+nav .openedMenu {
+    margin: 20px;
+    cursor: pointer;
+    display: none;
+}
+
+.nav__wrapper .nav__pages .closedMenu {
+    display: none;
+    cursor: pointer;
+}
+
+@media (max-width: 1300px) {
+
+    .emptyOne,
+    .emptyTwo {
+        display: none;
+    }
+
+    .nav__menu {
         flex-wrap: wrap;
-        
-    }
-   .header__list__social {
-        margin-left: 0;
     }
 
-
-    .header__container {
-        justify-self: center;
-        text-align: center;
-        padding: 10px;
-        font-size: 40%;
-    }
-         
-}
-
-.img__checked__menu {
-    width: 25px;
-}
-
-@media screen and (max-width: 768px) {
-    .header__up, .header__list, .header__list__social  {
-        display: grid;
-        grid-template-columns: 1fr;
-        
-    }
-   .header__list__social {
-        margin-left: 0;
-    }
-
-    .header__container {
-        justify-self: center;
-        padding: 10px;
-        text-align: center;
-        font-size: 40%;
-    }
-         
 }
 
 @media (max-width: 990px) {
-.nav__links__main__menu {
-    display: flex;
-    flex-direction: column;
-    }
-   .header__list__social {
-        margin-left: 0;
+    .nav__links__main__menu {
+        justify-content: start;
     }
 
-   .nav__social {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    top: 0;
-      
+    .nav__social {
+        position: relative;
+        display: flex;
+        flex-direction: row;
+        top: 0;
+
     }
-    
+
+}
+
+@media (max-width: 768px) {
+
+    nav .nav__links__main__menu {
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 10;
+        flex-direction: column;
+
+        align-items: center;
+        background: var(--color-gray);
+        transition: top 1s ease;
+        display: none;
+        padding-top: 5px;
+    }
+
+    .nav__link__main__menu {
+        margin: auto;
+        font-size: 0.8rem;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+
+    li.nav__link__main__menu a {
+        align-items: center;
+    }
+
+    .nav__link__main__menu:hover {
+
+        border-bottom: none;
+    }
+
+    .img__logo {
+        position: fixed;
+        z-index: 20;
+    }
+
+    nav .nav__links__main__menu .closedMenu {
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
+
+    .nav__menu .openedMenu {
+        display: block;
+    }
+
+    .nav__social .header__list__social li a {
+        display: inline-block;
+        padding: 15px;
+        text-decoration: none;
+        transition: 0.2s ease;
+    }
+
+    nav .openedMenu {
+        margin: 20px;
+        display: none;
+        cursor: pointer;
+    }
+
+    .nav__links__main__menu .closeMenu,
+    .nav__social .header__list__social li a {
+        display: none;
+        cursor: pointer;
+    }
+
+    .nav__links__main__menu .closedMenu {
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
+
+    nav .openedMenu {
+        display: block;
+    }
+
+    .header__list__social li {
+        display: inline-block;
+        padding: 12px;
+    }
+
 }
