--- a/css/index-header.css
+++ b/css/index-header.css
@@ -18,7 +18,7 @@
 }
 
 
-.nav__menu::before {
+/*.nav__menu::before {
     content: "";
     position: absolute;
     top: 0;
@@ -26,7 +26,7 @@
     width: 100%;
     height: 100%;
 
-}
+}*/
 
 h1 {
     color: var(--light-text-color);
@@ -93,7 +93,7 @@ h1 {
 }
 
 .svg-icon:hover {
-    fill: #d3904c;
+    fill: #c46d17;
 
 }
 
@@ -125,6 +125,7 @@ h1 {
     border-bottom: 2px solid currentColor;
     transition: 0.3ms;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .nav__link__main__menu a {
