added css, correct btn

--- a/css/common.css
+++ b/css/common.css
@@ -25,6 +25,7 @@
     --text-title: 'Bebas Neue';
     --text-content: 'Roboto', sans-serif;
     --text-gold: 'Satisfy';
+    --color-black: #18191a;
     
 }
 
