--- a/css/index-remember.css
+++ b/css/index-remember.css
@@ -1,8 +1,5 @@
 .container_remember_this {
-
-  
     display: flex;
-
     font-size: 100%;
     font: inherit;
     box-sizing: border-box;
@@ -54,6 +51,9 @@ margin-right: 10px;
        padding: 0px 15px 0px 15px;
 
     }
+   }
+   .remember_this__features{
+ margin-left: 50px;
    }
 
 
