--- a/css/products.css
+++ b/css/products.css
@@ -213,8 +213,10 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    padding-top: 10px;
-    padding-right: 50px;
+    padding-top: 70px;
+    padding-right: 150px;
+    padding-left: 100px;
+    padding-bottom: 70px;
 }
 
 /* .recipes{
